--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
+
   <h1>Lear Corporation</h1>
   <h2>Schedule Front Trim Shift 2</h2>
+  <include src="./partials/table.html"></include>
 
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <script type="module" src="./index.js"></script>
