--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./styles.css">
   <title>Page title</title>
 
 </head>
 
 <body>
+  <header>
+    <ul>
+      <li>Logo</li>
+      <li>Sign in</li>
+    </ul>
+  </header>
+  <main>
+    <h1>Lear Corporation</h1>
+    <h2>Schedule Front Trim Shift 2</h2>
+    <include src="./partials/day.html"></include>
+    <include src="./partials/table.html"></include>
+    <section>
+      <button type="button" data-make-schedule>Make schedule</button>
+    </section>
+  </main>
+  <footer></footer>
 
-  <h1>Lear Corporation</h1>
-  <h2>Schedule Front Trim Shift 2</h2>
-  <include src="./partials/table.html"></include>
+
 
   <!-- ❗️❗️❗️ Add partials like so for every page -->
   <script type="module" src="./index.js"></script>
