add function makeSchedule

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
     <h2>Schedule Front Trim Shift 2</h2>
     <include src="./partials/day.html"></include>
     <include src="./partials/table.html"></include>
-    <section>
-      <button type="button" data-make-schedule>Make schedule</button>
+    <section class="section-button">
+      <button type="button" class="button-make-schedule" data-make-schedule>Make schedule</button>
     </section>
   </main>
   <footer></footer>
