--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
     <include src="./partials/table.html"></include>
     <section class="section-button">
       <button type="button" class="button-make-schedule" data-make-schedule>Make schedule</button>
+      <button type="button" class="button-clear-schedule" data-clear-schedule>Clear schedule</button>
     </section>
   </main>
   <footer></footer>
